# scannCIO

./: .gitignore  CMakeLists.txt  README.md
tests/: CMakeLists.txt
tests/calibration/: CMakeLists.txt  CameraCalibrator.cpp  CameraCalibrator.h  Escaner.cpp  camera.cpp  camera.h  main.cc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reconstructor.cpp  reconstructor.h  scann.cpp  scann.h
